# qobit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contrib/pipewire/: 10-allowed-rates.conf  README.md
src/qobit/: __main__.py  config.py  store.py
src/qobit/audio/: device.py  media_keys.py  player.py  verify.py
src/qobit/qobuz/: client.py  models.py
src/qobit/ui/: _images.py  _now_playing.py  _utils.py  app.py
src/qobit/ui/screens/: album_detail.py  albums.py  artist_detail.py  artists.py  context_menu.py  mixes.py  playlist_detail.py  playlists.py  queue.py  search.py  tracks.py
src/qobit/ui/widgets/: lists.py  transport.py
