[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qobit"
version = "0.1.0"
description = "Bit-perfect Qobuz TUI client"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "httpx>=0.27",
    "textual>=0.80",
    "textual-image>=0.7",
    "pillow>=10.0",
]

[project.scripts]
qobit = "qobit.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qobit"]

[dependency-groups]
dev = ["ruff>=0.4", "textual-dev>=0.80"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
